<resources>
    <string name="app_name">Slovarik</string>

    <string name="hello_world">Hello world!</string>

    <string name="menu_drawer_item_Dictionary">Dictionary</string>
    <string name="menu_drawer_item_Phrases">Phrases</string>
    <string name="menu_drawer_item_Verbs">Verbs</string>
    <string name="menu_drawer_item_BackupMen">Backup manager</string>
    <string name="menu_drawer_item_AboutUs">About Us</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter text</string>

    <string name="title_activity_add_new_word_activity">Add New Word</string>
    <string name="title_activity_verbs">Verbs</string>

    <string name="PartsOfSpeech">Parts Of Speech</string>
    <string name="PartsOfSpeech2">Parts Of Speech:</string>

    <string name="PartsOfSpeech_Verb">Verb</string>
    <string name="PartsOfSpeech_Substantive">Substantive</string>
    <string name="PartsOfSpeech_Adjective">Adjective</string>
    <string name="PartsOfSpeech_Numeral">Numeral</string>
    <string name="PartsOfSpeech_Pronoun">Pronoun</string>
    <string name="PartsOfSpeech_Adverb">Adverb</string>
    <string name="PartsOfSpeech_Preposition">Preposition</string>
    <string name="PartsOfSpeech_NotSelected">Not selected</string>

    <string name="Label_InputText">Input Your Word</string>
    <string name="Label_Search">Search</string>
    <string name="Label_Change_language">Change sort method</string>
    <string name="Label_Add_Word">Add word</string>
    <string name="Label_Edit_Word">Edit word</string>
    <string name="Label_Edit">EDIT</string>
    <string name="Label_SecondaryWordHint">You can add another meaning of the word, if you press the [+] button.</string>
    <string name="Label_Labels3">You can add label for phrase, if you press the [+] button.</string>
    <string name="Label_Notes">Notes</string>
    <string name="Label_Transcription">Type Transcription</string>
    <string name="Label_Gender">Gender</string>
    <string name="Label_Gender2">Gender:</string>
    <string name="Label_Gender_Male">Male</string>
    <string name="Label_Gender_Female">Female</string>
    <string name="Label_Gender_Neuter">Neuter</string>
    <string name="Label_Type_Word">Type Word</string>
    <string name="Label_Type_Translation">Type Translation</string>
    <string name="Label_Save">Save</string>

    <string name="Label_SameWords">Same Words</string>
    <string name="Label_Labels">Labels</string>
    <string name="Label_Labels2">Labels:</string>
    <string name="Label_Cancel">Cancel</string>
    <string name="Label_Category">Category</string>
    <string name="Label_Category2">Category:</string>
    <string name="Label_Type_Labels">Type label name</string>
    <string name="Label_Type_Phrase">Type phrase</string>
    <string name="Base_Category_Unsorted">Unsorted</string>
    <string name="Base_Category_Questions">Questions</string>
    <string name="Base_Category_Answers">Answers</string>
    <string name="Base_Category_Official">Official</string>
    <string name="Base_Category_Exception">Exception</string>

    <string name="btn_create_backup">Create backup</string>
    <string name="btn_load_backup">Load backup</string>
    <string name="btn_read_backup">Read backup</string>

    <string name="Alert_dialog_title">Invalid input</string>
    <string name="Alert_dialog_Invalid_Primary">Word must be filled in</string>
    <string name="Alert_dialog_Invalid_Translation">Translation must be filled in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_word">View word</string>
    <string name="title_activity_edit_word_activity">Edit Word</string>
    <string name="title_activity_phrases_dictionary_activity">Phrases Dictionary</string>
    <string name="title_activity_add_new_phrase_activity">Add New Phrase</string>
    <string name="title_activity_view_prase">Prase</string>
    <string name="title_activity_edit_phrase_activity">Edit Phrase</string>
    <string name="title_activity_buckup_manager_activity">Buckup Manager</string>

    <string name="messages_added">Added: </string>

</resources>
