<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myselfapps.rav.slovarik.AddNewWord_activity"
    android:background="@color/backgroundColor">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Label_InputText"
            android:id="@+id/tv_InputText"
            android:layout_below="@+id/toolbar"

            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <ImageButton
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:id="@+id/ib_PrimaryFlag"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                 />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_PrimaryWord"
                android:hint="@string/Label_Type_Translation"
                android:layout_below="@+id/scrollView"
                android:layout_alignLeft="@+id/et_SecondaryWord"
                android:layout_alignStart="@+id/et_SecondaryWord"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:id="@+id/ib_RotateFlags"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:src="@drawable/tumblr_reblog"
                android:visibility="invisible" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_TranscriptionWord"
                android:layout_gravity="center"
                android:hint="@string/Label_Transcription"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="@dimen/flag_width"
                android:layout_height="@dimen/flag_height"
                android:id="@+id/ib_SecondaryFlag"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_SecondaryWord"
                android:layout_below="@+id/et_PrimaryWord"
                android:hint="@string/Label_Type_Word"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />

        </LinearLayout>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_PartsOfSpeech"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:prompt="@string/PartsOfSpeech"
            android:layout_marginTop="@dimen/activity_horizontal_margin" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/rg_Gender"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_Gender_Male"
                android:id="@+id/rb_Male"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_Gender_Female"
                android:id="@+id/rb_Female"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Label_Gender_Neuter"
                android:id="@+id/rb_Neuter"
                android:layout_weight="1"
                android:checked="true" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Label_SecondaryWordHint"
            android:id="@+id/tv_SecondaryWordHint"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin" />

        <ImageButton
            android:layout_width="@dimen/gender_width"
            android:layout_height="@dimen/gender_width"
            android:id="@+id/ib_AddNewSecondaryWord"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:src="@drawable/plus" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_Notes"
            android:layout_gravity="center_horizontal"
            android:lines="2"
            android:maxLines="6"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/Label_Notes"
            android:focusableInTouchMode="true" />

    </LinearLayout>
    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_addWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/check"
        fab:fab_colorNormal="@color/primary_floating"
        fab:fab_colorPressed="@color/primary_pressed_floating"
        fab:fab_colorRipple="@color/ripple_material_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin" />

</RelativeLayout>
