<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myselfapps.rav.slovarik.AddNewPhrase_activity"
    android:background="@color/backgroundColor">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sw_addNewPhrase"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Label_Category2"
                    android:id="@+id/textView4"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/project_vertical_medium_padding" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_Category"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/Label_Category"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:gravity="end" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <ImageButton
                    android:layout_width="@dimen/flag_width"
                    android:layout_height="@dimen/flag_height"
                    android:id="@+id/ib_PrimaryFlag_AddPrase"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:layout_gravity="center" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_PrimaryWord_AddPrase"
                    android:hint="@string/Label_Type_Phrase"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:layout_marginRight="@dimen/project_horizontal_margin"
                    android:padding="@dimen/abc_action_bar_overflow_padding_start_material"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <ImageButton
                    android:layout_width="@dimen/flag_width"
                    android:layout_height="@dimen/flag_height"
                    android:id="@+id/ib_RotateFlags_AddPrase"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:visibility="invisible" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_Transcription_AddPrase"
                    android:layout_gravity="center"
                    android:hint="@string/Label_Transcription"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:layout_marginRight="@dimen/project_horizontal_margin"
                    android:padding="@dimen/abc_action_bar_overflow_padding_start_material"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/project_horizontal_margin">

                <ImageButton
                    android:layout_width="@dimen/flag_width"
                    android:layout_height="@dimen/flag_height"
                    android:id="@+id/ib_SecondaryFlag_AddPrase"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_SecondaryPhrase"
                    android:hint="@string/Label_Type_Translation"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:padding="@dimen/abc_action_bar_overflow_padding_start_material"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/project_horizontal_margin"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <ImageButton
                    android:layout_width="@dimen/gender_width"
                    android:layout_height="@dimen/gender_width"
                    android:id="@+id/ib_AddNewLabel2"
                    android:src="@drawable/plus"
                    android:layout_marginTop="@dimen/project_horizontal_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Label_Labels3"
                    android:id="@+id/tv_hint_addNewPhrase"
                    android:layout_margin="@dimen/project_horizontal_margin" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/et_labels"
                    android:hint="@string/Label_Type_Labels"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <ImageButton
                    android:layout_width="@dimen/gender_width"
                    android:layout_height="@dimen/gender_width"
                    android:id="@+id/ib_AddNewLabel"
                    android:src="@drawable/check"
                    android:layout_marginRight="@dimen/project_horizontal_margin"
                    android:layout_marginTop="@dimen/project_horizontal_margin"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_show_labels" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/project_horizontal_margin"
                android:layout_marginRight="@dimen/project_horizontal_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/et_Notes_AddPrase"
                    android:hint="@string/Label_Notes" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_addPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/check"
        fab:fab_colorNormal="@color/primary_floating"
        fab:fab_colorPressed="@color/primary_pressed_floating"
        fab:fab_colorRipple="@color/ripple_material_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/project_horizontal_margin"
        android:layout_marginBottom="@dimen/project_horizontal_margin" />

</RelativeLayout>
